--- a/07-inference.Rmd
+++ b/07-inference.Rmd
@@ -300,7 +300,7 @@ knitr::include_graphics("docs/images/errors.jpg")
 Как понять, какой тест выбрать? Это, наверное, один из самых сложных вопросов в статистике. На него влияет большое количество нюансов, мы рассмотрим их в [следующем разделе](#stats_criteria)
 
 
-## Размер выборки
+## Размер выборки (#sample_size)
 
 **Расчет размера выборки** -- важнейший этап, потому что именно он отвечает за нивелирование ошибки второго рода, сделать ложноотрицательный вывод. Вполне может оказаться так, что из-за маленькой выборки мы просто не смогли зафиксировать различия, которые на самом деле есть в генеральной совокупности! 
 
@@ -367,7 +367,7 @@ knitr::include_graphics("docs/images/pvalue_dist_2.png")
 
 Для того, чтобы детально поразбираться в нюансах размера эффекта и выборки, можно пройти курс Лакенса https://www.coursera.org/learn/statistical-inferences (кажется, теперь только с vpn)
 
-## Расчет статического критерия и проверка значимости
+## Расчет статического критерия и проверка значимости (#stat_test_example)
 
 Вернемся снова к нашим вопросам.
 
@@ -394,9 +394,8 @@ knitr::include_graphics("docs/images/means_dist.png")
 ```
 </p>
 
-
 Далее, нам нужно как-то оценить, насколько $M_{маленькие}$ удалено от $M_{большие}$. Что мы делаем всегда, когда нам нужно сравнить, какое из значений, взятых из разных выборок, больше или меньше другого? Переходим к стандартному нормальному распределению -- распределению Z-оценок! 
-$Z = \frac{x - \bar x}{s}$
+$Z = \frac{X - \bar X}{sd}$
 
 Причем стандартным отклонением этого распределения будет [стандартная ошибка среднего](standart_error) -- величина стандартного отклонения для распределения выборочных средних.
 
@@ -413,6 +412,7 @@ $Z_{Mмаленькие} = \frac{15-14}{0.45} = 2.2$
 ```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="80%"}
 knitr::include_graphics("docs/images/z_dist.png")
 ```
+</p>
 
 Мы знаем, что числу 2 на распределении Z-оценок соответствует примерно 96% данных (мы знаем распределение данных для любого нормального распределения). И вспомним, что мы строили это распределение исходя из предположения равенства нулевой гипотезы, что $M_{большие} = M_{маленькие}$. Как тогда мы можем проинтерпретировать полученные оценки?
 
@@ -430,4 +430,9 @@ $p-value = 0.04 < \alpha = 0.05$.
 
 В этом случае, если p-value получилось меньше альфы, то мы можем сказать, что **вероятность получить такие или еще более сильные различия между средними достаточно при условии верности нулевой гипотезы статистически значимо мала, поэтому мы можем отвергнуть нулевую гипотезу об отсутствии различий и принять альтернативную гипотезу о том, что различия есть**
 
+Величина p-value связана [мы уже обсуждали это выше](sample_size):
+
+* Размером выборки: чем больше объем выборки, тем больше статистическая мощность и тем чаще и увереннее будут появляться p-value < 0.05
+* Размером эффекта: чем больше размер эффекта, тем ниже будет p-value 
+* Дисперсией: чем меньше дисперсия и чем более однородные данный, тем ниже будет p-value
 
