--- a/08-stats_criteria.Rmd
+++ b/08-stats_criteria.Rmd
@@ -22,21 +22,92 @@ students %>%
   mutate(ansences_por_groups = ifelse(absences_por <=5, "less", ifelse(absences_por <=15, "middle", "more"))) -> students-> students
 ```
 
+```{r}
+# students %>% 
+#   write_csv(file = "students.csv")
+```
+
+
+Статистическим критерием называется правило, по которому мы будем пытаться отвергнуть нулевую гипотезу. Разным гипотезам и данным подходят разные критерии.
+
+Статистический критерий включает:
+
+* Теоретическое распределение, на котором мы будем располагать сравниваемые средние
+* Формулу, которым задается это распределение, по которому мы будем рассчитывать искомое значение критерия (как уже рассчитывали $Z_{Mмаленькие}$)
+* Соответствие рассчитанного значения и процентов расположенных данных до этого значения на распределении
+* Формулу для рассчета числа степеней свобооды
+
+### Степени свободы
+
+Число степененй свободы (Degrees of Freedom, df) -- количество направления для изменения признака. Формула для расчета степеней свободы своя для каждого статистического критерия (нам не нужно рассчитывать самостоятельно) и зависит, собственно, от вида статистического критерия, дизайна нашего исследования (сколько сравнений мы проводим) и числа наблюдений в выборке.
+
 ## Ключевые статистики критериев
 
+### Статистики (Z, T, F)
+
+**Z-распределение**
+
+В прошлый раз мы рассмотрели пример, когда сравнивали среднее время, которое проводят родители с детьми, в больших и маленьких городах, и сравнивали эти значения на примере [Z-распределения] {stat_test_example): мы получали Z-статистику и находили соответствующий распределению Z-оценок процент данных для найденной точки.
+
+$Z = \frac{M - \mu}{\frac{\sigma}{\sqrt{n}}} = \frac{M - \mu}{\frac{sd}{\sqrt{n}}}$
+
+Это самый простой вариант критерия для проверки статистических гипотез -- но не единственный. На самом деле, в качестве распределения, на которое мы помещаем точки (средние) и сравниваем их друг с другом, могут быть и другие, в зависимости от характера наших данных. Рассмотрим основные из них.
+
 https://gallery.shinyapps.io/dist_calc/ 
+
+**T-распределение Стьюдента**
+
+<p align="center"> 
+```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="100%"}
+knitr::include_graphics("docs/images/t-dist.png")
+```
+</p>
+
+Как мы видим, оно очень похоже на Z-распределение, но у него чуть более приподнятые хвосты.
+
+Негласно считается, что при объеме выборки от n=30 t-распределение считается близким к Z-распределению, которе является нормальным, и можем использовать его. Но в реальности это не совсем так.
+
+$t = \frac{M_1 - M_2}{\frac{sd_{1;2}}{\sqrt{n_{1;2}}}} = \frac{M_1 - M_2}{\sqrt{\frac{sd_1^2}{n_1} + \frac{sd_2^2}{n_2}}}$
+
+**F-распределение**
+
+$\chi^2$**-распределение**
+
 
 ## Выбор статистического критерия 
 
 **Вопросы, которые влияют на принятие решения относительно статистического теста:**
 
-1. Зависимая переменная непрерывная (интервальная шкала или шкала отношений) или категориальная / дискретная (номинативная или порядковая шкала)?
-2. Если ЗП непрерывная -- она описывается параметрическим (чаще всего нормальным) распределением? *(определяется чаще "на глаз" по графику плотности вероятности или QQ-графиками, тесты на нормальность почти всегда будут давать негативный результат из-за чувствительности и поэтому в современном анализе данных используются мало)*
+1. Зависимая переменная количественная (интервальная шкала или шкала отношений) или категориальная (номинативная или порядковая шкала)?
+2. Если ЗП количественная -- она описывается параметрическим (чаще всего нормальным) распределением? *(определяется чаще "на глаз" по графику плотности вероятности или QQ-графиками, тесты на нормальность почти всегда будут давать негативный результат из-за чувствительности и поэтому в современном анализе данных используются мало)*
 3. Сколько независимых переменных?
-4. НП непрерывные (интервальная и шкала отношений) или категориальные / дискретные (номинативная и порядковая)?
+4. НП количественные (интервальная и шкала отношений) или категориальные (номинативная и порядковая)?
 5. Если НП категориальные и мы сравниваем группы -- данные в группах зависимы или нет? Если нет, как сильно отличаются данные в группах, можем ли сказать, что дисперсия ЗП примерно одинакова в группах или нет? (*равенство дисперсий называется Homogeneity of Variance, проверяется с помощью Levene's test*)
 
 Есть большое количество схем, но обычно они сильно перегруженны и сложны в использовании, больше путают, чем помогают. 
 
 Но я зачем-то все равно решила попробовать нарисовать свою, и вот результат:
 <https://miro.com/app/board/uXjVOxmKhr8=/?share_link_id=245423331470>
+
+
+## T-тест (сравнение средних двух групп)
+
+Вернемся к данным про студентов и нашим вопросам
+
+> Допустим, мы исследовали семьи с подростками в крупных (GP school) и небольших городах (MS school) и на нашей выборке посчитали, что в крупных городах родители проводят со своими детьми в среднем 14 часов, а в небольших городах -- 15 часов в неделю (из данных задания на доверительный интвервал). 
+1. Отличается ли статически значимо время, которое проводят родители с детьми в России в крупных и небольших городах? 2. Отличается ли статистически значимо частота употребления алкоголя в семьях с менее поддерживающими отношениями и более поддерживающими? 
+3. Отличается ли статистически значимо средний балл по математике у тех, кто чаще или реже пропускает занятия?
+
+```{r eval=TRUE, echo = FALSE, message = FALSE}
+kable(students[1:10,]) %>% scroll_box(width = "100%") 
+```
+
+Первый вопроос мы подробноо разбирали в прошлый раз. Сейчас остановимся на третьем, который уже затрагивали
+
+
+
+
+## ANOVA (дисперсионный анализ)
+
+https://angelgardt.github.io/SFDA2022/book/oneway-anova.html
+
