--- a/08-stats_criteria.Rmd
+++ b/08-stats_criteria.Rmd
@@ -18,8 +18,8 @@ students %>%
   drop_na() %>% 
   mutate(G_mat = rowMeans(dplyr::select(., c(G1_mat, G2_mat, G3_mat))),
          G_por = rowMeans(dplyr::select(., c(G1_por, G2_por, G3_por)))) %>% 
-  mutate(ansences_mat_groups = ifelse(absences_mat <=5, "less", ifelse(absences_mat <=15, "middle", "more"))) %>% 
-  mutate(ansences_por_groups = ifelse(absences_por <=5, "less", ifelse(absences_por <=15, "middle", "more"))) -> students-> students
+  mutate(absences_mat_groups = ifelse(absences_mat <=5, "less", ifelse(absences_mat <=15, "middle", "more"))) %>% 
+  mutate(absences_por_groups = ifelse(absences_por <=5, "less", ifelse(absences_por <=15, "middle", "more"))) -> students
 ```
 
 ```{r}
@@ -32,14 +32,16 @@ students %>%
 
 Статистический критерий включает:
 
-* Теоретическое распределение, на котором мы будем располагать сравниваемые средние
-* Формулу, которым задается это распределение, по которому мы будем рассчитывать искомое значение критерия (как уже рассчитывали $Z_{Mмаленькие}$)
+* Теоретическое распределение, на котором мы будем располагать сравниваемые средние: вид кривой и математическая формула этого вероятностного закона
+* Формулу, по которому мы будем рассчитывать искомое значение критерия (как уже рассчитывали $Z_{Mмаленькие}$) исходя из наших данных на выборке
 * Соответствие рассчитанного значения и процентов расположенных данных до этого значения на распределении
-* Формулу для рассчета числа степеней свобооды
+* Формулу для рассчета числа степеней свобооды для этого критерия
 
 ### Степени свободы
 
 Число степененй свободы (Degrees of Freedom, df) -- количество направления для изменения признака. Формула для расчета степеней свободы своя для каждого статистического критерия (нам не нужно рассчитывать самостоятельно) и зависит, собственно, от вида статистического критерия, дизайна нашего исследования (сколько сравнений мы проводим) и числа наблюдений в выборке.
+
+Для t-критерия число степеней свободы высчитывается очень просто: $df = n_1 -1 + n_2 - 1 = n_1 + n_2 - 2$
 
 ## Ключевые статистики критериев
 
@@ -48,6 +50,12 @@ students %>%
 **Z-распределение**
 
 В прошлый раз мы рассмотрели пример, когда сравнивали среднее время, которое проводят родители с детьми, в больших и маленьких городах, и сравнивали эти значения на примере [Z-распределения] {stat_test_example): мы получали Z-статистику и находили соответствующий распределению Z-оценок процент данных для найденной точки.
+
+<p align="center"> 
+```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="100%"}
+knitr::include_graphics("docs/images/z_dist.png")
+```
+</p>
 
 $Z = \frac{M - \mu}{\frac{\sigma}{\sqrt{n}}} = \frac{M - \mu}{\frac{sd}{\sqrt{n}}}$
 
@@ -65,11 +73,28 @@ knitr::include_graphics("docs/images/t-dist.png")
 
 Как мы видим, оно очень похоже на Z-распределение, но у него чуть более приподнятые хвосты.
 
+Формула, которой задается вероятностный закон Т-распределения Стьюдента:
+
+<p align="center"> 
+```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="100%"}
+knitr::include_graphics("docs/images/t-dist-pdf.png")
+```
+</p>
+
+
 Негласно считается, что при объеме выборки от n=30 t-распределение считается близким к Z-распределению, которе является нормальным, и можем использовать его. Но в реальности это не совсем так.
+
+Формула для расчета T-значения исходя из наших данных:
 
 $t = \frac{M_1 - M_2}{\frac{sd_{1;2}}{\sqrt{n_{1;2}}}} = \frac{M_1 - M_2}{\sqrt{\frac{sd_1^2}{n_1} + \frac{sd_2^2}{n_2}}}$
 
 **F-распределение**
+
+<p align="center"> 
+```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="100%"}
+knitr::include_graphics("docs/images/F-dist.png")
+```
+</p>
 
 $\chi^2$**-распределение**
 
@@ -78,7 +103,7 @@ $\chi^2$**-распределение**
 
 **Вопросы, которые влияют на принятие решения относительно статистического теста:**
 
-1. Зависимая переменная количественная (интервальная шкала или шкала отношений) или категориальная (номинативная или порядковая шкала)?
+1. Зависимая переменная: количественная (интервальная шкала или шкала отношений) или категориальная (номинативная или порядковая шкала)?
 2. Если ЗП количественная -- она описывается параметрическим (чаще всего нормальным) распределением? *(определяется чаще "на глаз" по графику плотности вероятности или QQ-графиками, тесты на нормальность почти всегда будут давать негативный результат из-за чувствительности и поэтому в современном анализе данных используются мало)*
 3. Сколько независимых переменных?
 4. НП количественные (интервальная и шкала отношений) или категориальные (номинативная и порядковая)?
@@ -102,10 +127,55 @@ $\chi^2$**-распределение**
 kable(students[1:10,]) %>% scroll_box(width = "100%") 
 ```
 
-Первый вопроос мы подробноо разбирали в прошлый раз. Сейчас остановимся на третьем, который уже затрагивали
+Первый вопроос мы подробно разбирали в прошлый раз. Сейчас остановимся на третьем, который уже затрагивали.
+
+Пройдем по алгоритму выбора статистического теста: <https://miro.com/app/board/uXjVOxmKhr8=/?share_link_id=245423331470>
+
+Помимо осноовных отраженных ответвлений, для каждого критерия еще существует ряд допущений.
+
+### Допущения для т-теста
+
+1. Данные распределены нормально (или, если измеряемый признак является случайной велиичной, в группах больше 30 наблюдений) ()
+2. Дисперсии гомогенны
+
+
+### Зависимые и независимые выборки
+
+### Вычисление т-теста
+
+Средний балл и стандартное отклонение в группах тех, кто прогуливает меньше всего (на паре мы назвали их прихожанами):
+
+```{r eval=TRUE, echo = FALSE, message = FALSE}
+students %>% 
+  filter(absences_mat_groups == "less") %>% 
+  select(G_mat) %>% 
+  summarise(mean = mean(G_mat), sd = sd(G_mat), n = length(G_mat))
+```
+Средний балл в группах прогулищиков:
+
+```{r eval=TRUE, echo = FALSE, message = FALSE}
+students %>% 
+  filter(absences_mat_groups == "more") %>% 
+  select(G_mat) %>% 
+  summarise(mean = mean(G_mat), sd = sd(G_mat), n = length(G_mat))
+```
 
 
 
+```{r, eval=TRUE}
+students %>% 
+  filter(absences_mat_groups != "middle") -> students_2
+
+t.test(students_2$G_mat ~ students_2$absences_mat_groups, paired = FALSE)
+```
+
+```{r}
+students_2 %>% 
+  ggplot(aes(x=absences_mat_groups, y = G_mat)) +
+  geom_boxplot(aes(fill = absences_mat_groups)) +
+  # scale_fill_viridis(discrete=TRUE) +
+  theme_minimal()
+```
 
 ## ANOVA (дисперсионный анализ)
 
