--- a/08-stats_criteria.Rmd
+++ b/08-stats_criteria.Rmd
@@ -22,30 +22,23 @@ students %>%
   mutate(absences_por_groups = ifelse(absences_por <=5, "less", ifelse(absences_por <=15, "middle", "more"))) -> students
 ```
 
-```{r}
-# students %>% 
-#   write_csv(file = "students.csv")
-```
-
 
 Статистическим критерием называется правило, по которому мы будем пытаться отвергнуть нулевую гипотезу. Разным гипотезам и данным подходят разные критерии.
 
 Статистический критерий включает:
 
-* Теоретическое распределение, на котором мы будем располагать сравниваемые средние: вид кривой и математическая формула этого вероятностного закона
-* Формулу, по которому мы будем рассчитывать искомое значение критерия (как уже рассчитывали $Z_{Mмаленькие}$) исходя из наших данных на выборке
-* Соответствие рассчитанного значения и процентов расположенных данных до этого значения на распределении
+* Теоретическое распределение, на котором мы будем располагать сравниваемые средние: вид кривой и математическая формула этого вероятностного закона (Т-распределение, F-распределение, $\chi^2$-распределение и другие)
+* Формулу, по которому мы будем рассчитывать искомое значение критерия (как уже рассчитывали $Z_{Mмаленькие}$) исходя из наших данных на выборке)
+* Значения (таблицу значений, но мы не будем ими пользоваться, за нас все считают бесдушные машины), приводящее в соответствие каждой оценке (например, Z-значению или Т-значению) и процент данных, расположенных данных до этого значения на графике распределеня
 * Формулу для рассчета числа степеней свобооды для этого критерия
 
-### Степени свободы
+## Степени свободы
 
 Число степененй свободы (Degrees of Freedom, df) -- количество направления для изменения признака. Формула для расчета степеней свободы своя для каждого статистического критерия (нам не нужно рассчитывать самостоятельно) и зависит, собственно, от вида статистического критерия, дизайна нашего исследования (сколько сравнений мы проводим) и числа наблюдений в выборке.
 
 Для t-критерия число степеней свободы высчитывается очень просто: $df = n_1 -1 + n_2 - 1 = n_1 + n_2 - 2$
 
-## Ключевые статистики критериев
-
-### Статистики (Z, T, F)
+## Ключевые распределения и статистики критериев (Z, T, F)
 
 **Z-распределение**
 
@@ -66,7 +59,7 @@ https://gallery.shinyapps.io/dist_calc/
 **T-распределение Стьюдента**
 
 <p align="center"> 
-```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="100%"}
+```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="70%"}
 knitr::include_graphics("docs/images/t-dist.png")
 ```
 </p>
@@ -76,7 +69,7 @@ knitr::include_graphics("docs/images/t-dist.png")
 Формула, которой задается вероятностный закон Т-распределения Стьюдента:
 
 <p align="center"> 
-```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="100%"}
+```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="50%"}
 knitr::include_graphics("docs/images/t-dist-pdf.png")
 ```
 </p>
@@ -101,7 +94,7 @@ $\chi^2$**-распределение**
 
 ## Выбор статистического критерия 
 
-**Вопросы, которые влияют на принятие решения относительно статистического теста:**
+**Вопросы, которые влияют на выбор статистического теста:**
 
 1. Зависимая переменная: количественная (интервальная шкала или шкала отношений) или категориальная (номинативная или порядковая шкала)?
 2. Если ЗП количественная -- она описывается параметрическим (чаще всего нормальным) распределением? *(определяется чаще "на глаз" по графику плотности вероятности или QQ-графиками, тесты на нормальность почти всегда будут давать негативный результат из-за чувствительности и поэтому в современном анализе данных используются мало)*
@@ -112,10 +105,59 @@ $\chi^2$**-распределение**
 Есть большое количество схем, но обычно они сильно перегруженны и сложны в использовании, больше путают, чем помогают. 
 
 Но я зачем-то все равно решила попробовать нарисовать свою, и вот результат:
-<https://miro.com/app/board/uXjVOxmKhr8=/?share_link_id=245423331470>
+<https://miro.com/app/board/uXjVOxmKhr8=/?share_link_id=245423331470> (будет обновляться)
 
+<p align="center"> 
+```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="100%"}
+knitr::include_graphics("docs/images/stats_cr_scheme.png")
+```
+</p>
+
+
+### Параметрические и непараметрические критерии
+
+В списке вопросов, которые влияют на выбор статистического критерия, вторым пунктом идет вопрос о параметрике. Что это значит?
+
+Под **параметрическими** распределением имеется в виду любое распределение, которое можно описать законом. Вспоминаем: закон распределения -- это формула, по которой можем привести любому числу вероятность встретить такое значение в природе (разбирали это в теме про [распределения](#distributions) ). В этой формуле есть параметры -- неизвестные переменные, которые мы стремимся узнать. Для нормально распределения это среднее генерально совокупности (математическое ожидание) и стандартное отлокнение генеральной совокупности. Посмотрим еще раз на формулу нормального распределения и найдем их:
+$P(x) = \frac{e^{-(x - \mu)^{2}/(2\sigma^{2}) }} {\sigma\sqrt{2\pi}}$
+
+Вспомним еще, что признаки, которые мы исследуем в психологических исследованиях, являются в основном [случайными величинами](#random-variable), а при большом объеме данных случайные величины, согласно [центральной предельной теореме](#ctt), распределены нормально. Поэтому в исследования психологических признаков под параметрическим распределением обычно имеется в виду одно конкретное распределение -- **нормальное**.
+
+Если переменная, которая выражает исследуемый признак, распределена нормально, то мы можем применять для ее изучения параметрические статистические критерии, предполагающие нормальное распределение данных: т-тест, ANOVA. Если переменная распределна не нормально, то нужно использовать их непараметрические аналоги: тест Манна-Уитни или Вилкоксона, тест Краскела-Уоллиса. 
+
+Проверка на нормальность -- довольно устоявшаяся в алгоритме проверки гипотез рутина. Но есть один нюанс.
+
+1. При малом объеме данных сложно понять, как распределены данные, нормально или нет.
+2. При большой объеме данных любое, даже малейшее отклонение от нормального распределения будет значимым.
+
+Поэтому в современной культуре исследований проверке на нормальность уже не отводится такое сакральное значение. Важнее, например, оперировать размером выборки: если она достаточно большая (можем вернуться к эмприческому правилу к n >= 30), то достаточно взлянуть на распределение данных и QQ-plot, и если они не вызывают подозрений, смело использовать параметрические методы. Если выборка маленькая или если данные при большой выборке явно сильно отличаются от колоколообразной гауссианы, то лучше использовать a) непараметрические аналоги б) обобщенные линейные модели (про них поговорим позже).
+
+Итак, я бы не рекомендовала делать тщательную проверку на нормальность вроде теста Колмогорова-Смирноова или Шапиро-Улика (хотя можно их считать, это не возбраняется), а оценить принадлежность к параметрическому (в данном случае нормальному) распределению следующим образом:
+
+1. График плотности вероятности или гистограмма: симметричность и эксцесс
+2. QQ-plot
+
+<p align="center"> 
+```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="70%"}
+knitr::include_graphics("docs/images/parametric_assumptions.png")
+```
+Графики из книжки Энди Филда "Discovering Statistics Using R"</p>
+ 
+### Зависимые и независимые выборки
+
+Еще один пункт при выборе статистического критерия -- это зависимые у нас наблюдения или нет. Мы обсуждали [зависимые и независимые выборки вначале](#dependent_samples). Теперь это знание пригодится нам, чтобы правильно подбирать статистический метод.
+
+<p align="center">
+```{r echo= FALSE, fig.align = 'center', out.width="100%"}
+knitr::include_graphics("docs/images/samples.png")
+```
+</p>
 
 ## T-тест (сравнение средних двух групп)
+
+Первым из статистических критериев мы рассмотрим один из самых простых вариантов -- т-тест.
+
+Это статистический критерий, распределение которого относится к семейству Т-распределений -- очень похоже на нормальное, но с более приподнятыми хвостами. Используется для сравнения средних двух групп, измеренных в метрической (количественной) шкале. Для остальных шкал т-тест не подходит *(хотя признаки, измеренные по шкале Лайкерта, например, по шкале от 1 до 5, иногда могут приписываться к количественным ихмерениям, но в рамках этого курса мы не будем это затрагивать)*
 
 Вернемся к данным про студентов и нашим вопросам
 
@@ -131,17 +173,35 @@ kable(students[1:10,]) %>% scroll_box(width = "100%")
 
 Пройдем по алгоритму выбора статистического теста: <https://miro.com/app/board/uXjVOxmKhr8=/?share_link_id=245423331470>
 
-Помимо осноовных отраженных ответвлений, для каждого критерия еще существует ряд допущений.
+Помимо основных отраженных ответвлений, для каждого критерия существует ряд допущений.
+
+Допущения (assumptions) -- это утверждения про  характер наших данных, без соблюдения которых параметрические тесты будут работаьт некорректно (поэтому их никто и не любит).
 
 ### Допущения для т-теста
 
-1. Данные распределены нормально (или, если измеряемый признак является случайной велиичной, в группах больше 30 наблюдений) ()
-2. Дисперсии гомогенны
+1. Данные распределены нормально (или, если измеряемый признак является случайной велиичной, в группах больше 30 наблюдений) 
+2. Дисперсии однородны (гомогенны) -- проверяется с помощью теста Ливеня.
 
+### Непараметрические аналоги
 
-### Зависимые и независимые выборки
+В случае, если допущения нормальности и однородноости дисперсий нарушаются, мы не можем использовать т-тест. 
 
-### Вычисление т-теста
+<p align="center"> 
+```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="70%"}
+knitr::include_graphics("docs/images/scheme-t-tests.png")
+```
+</p>
+
+### Независимые и парные тесты
+
+Тут тоже все довольно просто:
+
+* Если у нас независимые выборки, то мы используем независмый т-тест или его непараметрический аналог -- тест Манна-Уитни.
+* Если выборки зависимые, то мы используем парный т-тест или его непараметрический аналог -- тест Вилкоксона.
+
+Обилие наименований может быть пугающим, но по сути, это один и тот же тест с небольшими поправками -- просто в разных названиях увековечено больше статистиков!
+
+### Вычисление т-теста и непараметрических аналогов
 
 Средний балл и стандартное отклонение в группах тех, кто прогуливает меньше всего (на паре мы назвали их прихожанами):
 
@@ -169,11 +229,21 @@ students %>%
 t.test(students_2$G_mat ~ students_2$absences_mat_groups, paired = FALSE)
 ```
 
-```{r}
+```{r eval=TRUE, echo = FALSE, warning=FALSE}
 students_2 %>% 
   ggplot(aes(x=absences_mat_groups, y = G_mat)) +
   geom_boxplot(aes(fill = absences_mat_groups)) +
   # scale_fill_viridis(discrete=TRUE) +
+  theme_minimal()
+```
+
+```{r eval=TRUE, echo = FALSE, warning=FALSE}
+students_2 %>% 
+  ggplot(aes(x=absences_mat_groups, y = G_mat)) +
+  geom_violin(aes(fill = absences_mat_groups)) +
+  geom_boxplot(aes(fill = absences_mat_groups), width=0.2) +
+  stat_summary(fun.y = "mean", colour = "black", size = 2, geom = "point") +
+  # stat_summary(fun.data=mean_se, geom="errorbar", color="black", width=0.2) +
   theme_minimal()
 ```
 
